# avdoc

./: .bumpversion.cfg  .gitignore  README.md  avdoc.py  devenv.nix  justfile  pyproject.toml
avdoc/: __init__.py  __main__.py
tests/: example.avsc  test_cli.py
