[tool.poetry]
name = "avdoc"
version = "0.2.0"
description = "CLI tool to generate HTML documentation for an Apache Avro schema"
license = "AGPL-3.0-or-later"
authors = ["Ben Jeffrey <mail@benjeffrey.net>"]
readme = "README.md"
repository = "https://github.com/jeffbr13/avdoc"
keywords = ["avro", "avro-schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]

[tool.poetry.dependencies]
python = "^3.10"
avro = "^1.11.1"
dominate = "^2.8.0"
pygraphviz = "^1.11"
mistune = "^3.0.1"

[tool.poetry.scripts]
avdoc = "avdoc.__main__:main"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "F405"]
# Same line-length as black:
line-length = 88
